--- a/Hotzone/templates/casedetailsadded.html
+++ b/Hotzone/templates/casedetailsadded.html
@@ -12,13 +12,13 @@
     <h1 style='text-align: center; font-size: 40px;'>HotZone</h1>
 </head>
 <body>
-    <h2>Case Created Successfully: </h2>
+    <h2>Case Added Successfully: </h2>
     <p> Name - {{ name }}</p>
     <p> ID Number - {{ idnumber }}</p>
     <p> Date of Birth - {{ dateofbirth }}</p>
     <p> Virus Name - {{ virusname }}</p>
     <p> Disease - {{ disease }}</p>
-    <p> Case ID - {{ caseid }}</p>
+    <p> Case Number - {{ caseid }}</p>
     <p> Date Confirmed - {{ dateconfirmed }}</p>
     <p> Case Type - {{ casetype }}</p>
     <p></p>
