--- a/Hotzone/templates/locationdetailsadded.html
+++ b/Hotzone/templates/locationdetailsadded.html
@@ -12,8 +12,8 @@
     <h1 style='text-align: center; font-size: 40px;'>HotZone</h1>
 </head>
 <body>
-    <h2>Location added successfully to the case: </h2>
-    <p> Case ID - {{ caseid }}</p>
+    <h2>Location details added successfully to the case: </h2>
+    <p> Case Number - {{ caseid }}</p>
     <p> Patient Name - {{ patientname }}</p>
     <p> Location - {{ location }}</p>
     <p> Address - {{ address }}</p>
