--- a/Hotzone/templates/locationdetails.html
+++ b/Hotzone/templates/locationdetails.html
@@ -19,5 +19,7 @@
         {{ form.as_p }}
         <input type="submit" value="Add Location Details">
     </form>
+    <p></p>
+    <button onclick="location.href= '/user/'">Back</button>
 </body>
 </html>
